# cochino_list_py

./: GEMINI.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 78250fcb3509_create_establishments_table.py  e845338faf5d_create_closures_table.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/services/: __init__.py  populate.py  scrape.py  scrape_and_populate.py
backend/cochino_py_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  types.ts
